--- a/src/stylesheets/lungo.widgets.notification.less
+++ b/src/stylesheets/lungo.widgets.notification.less
@@ -30,14 +30,11 @@
     & .window {
         position: relative;
         opacity: 0;
-
-        //transition-property: -webkit-transform, transform, opacity;
-        // @TODO: Correct vendor property;
         .transition(all @keyframe @defaultTrasition);
 
         &.show {
             opacity: 1;
-            // .transition(all @keyframe @defaultTrasition);
+            .transition-delay(@keyframe);
         }
 
         &:not(.special) {
@@ -50,18 +47,14 @@
             text-align: center;
 
             .border-radius(@modal_border_radius);
-            // .transform(translate3d(0, 100%, 0));
-            .transform(scale(0.85));
+            .transform(translate3d(0, 10%, 0));
 
-            &.show {
-                .transform(translate3d(0, 0%, 0));
-            }
+            &.show { .transform(translate3d(0, 0, 0)); }
 
             & .icon {
                 display: block;
                 font-size: 5.0em;
                 &.loading {
-                    // margin: 24px auto;
                     margin-top: 24px;
                     margin-bottom: 24px;
                 }
