--- a/src/stylesheets/Lungo.base.less
+++ b/src/stylesheets/Lungo.base.less
@@ -99,18 +99,22 @@ body {
     padding: 0;
     width: 100%;
     height: 100%;
-    max-height: 100%;
+    // max-height: 100%;
 
-    overflow: hidden;
+    // overflow: hidden;
+    overflow-y: visible !important;
 
     font-family: Helvetica, Arial, sans-serif;
     font-size: 13px;
     line-height: 1.231;
 
+
+    -webkit-user-select:none;
     -webkit-touch-callout: none;
-    display: -webkit-box;
     -webkit-box-orient: vertical;
     -webkit-box-align: stretch;
+    -webkit-tap-highlight-color: rgba(0,0,0,0);
+    display: -webkit-box;
 }
 
 a {
