--- a/src/stylesheets/Lungo.theme.scaffold.less
+++ b/src/stylesheets/Lungo.theme.scaffold.less
@@ -80,15 +80,18 @@ header nav {
     &.plain a:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
 }
 
-.toolbar a {
-    color: @theme-light;
+footer nav {
+    & a {
+        color: @theme-light;
 
-    &.current, &.active {
-        color: @white;
-        background: @black;
-        .box-shadow(~"inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)");
+        &.current, &.active {
+            color: @white;
+            background: @black;
+            .box-shadow(~"inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)");
+        }
     }
 }
+
 
 .groupbar {
     background: @theme-dark;
@@ -154,7 +157,7 @@ section.aside {
 /* @end */
 
 /* @group .list */
-.list, .list li:not(.toolbar) a { color: #2a2a2a; }
+.list, .list li a { color: #2a2a2a; }
 
 section .list {
     & ul, & li { background: #fff; }
@@ -205,22 +208,6 @@ section .list {
     & .contrast {
         background: @theme-dark;
         color: @theme-light;
-    }
-
-    & .toolbar {
-        border-bottom-color: rgba(0,0,0,0.2);
-
-        & .toolbar a {
-            .box-shadow(~"1px 0px 0px #d9d9d9");
-
-            &:last-child { .box-shadow(none); }
-            &.current {
-                background: transparent;
-                color: #333;
-                text-shadow: none !important;
-            }
-
-        }
     }
 }
 /* @end */
