--- a/src/stylesheets/constants.less
+++ b/src/stylesheets/constants.less
@@ -4,12 +4,10 @@
 @header-height: 42px;
     @header_nav_height: 41px;
     @header_groupbar_height: 30px;
-
-@header_footer_height: 40px;
-@footer_toolbar_height: 48px;
+@footer-height: 44px;
     @with-labels-height: 51px;
-@article-bottom: 41px;
-    @article-bottom-with-labels: 52px;
+
+@article-bottom: 45px;
     @article_with_header_extended: 72px;
 
 @border-radius: 3px;
