--- a/src/stylesheets/css/Lungo.theme.scaffold.css
+++ b/src/stylesheets/css/Lungo.theme.scaffold.css
@@ -74,11 +74,11 @@ header nav:not(.plain).right a {
 header nav.plain a:active {
   text-shadow: 0 0 4px rgba(255, 255, 255, 0.5);
 }
-.toolbar a {
+footer nav a {
   color: #cccccc;
 }
-.toolbar a.current,
-.toolbar a.active {
+footer nav a.current,
+footer nav a.active {
   color: #ffffff;
   background: #000000;
   -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
@@ -185,7 +185,7 @@ section.aside.right {
 /* @end */
 /* @group .list */
 .list,
-.list li:not(.toolbar) a {
+.list li a {
   color: #2a2a2a;
 }
 section .list ul,
@@ -233,30 +233,6 @@ section .list li {
 .list .contrast {
   background: #333333;
   color: #cccccc;
-}
-.list .toolbar {
-  border-bottom-color: rgba(0, 0, 0, 0.2);
-}
-.list .toolbar .toolbar a {
-  -webkit-box-shadow: 1px 0px 0px #d9d9d9;
-  -moz-box-shadow: 1px 0px 0px #d9d9d9;
-  box-shadow: 1px 0px 0px #d9d9d9;
-  -webkit-box-shadow: 1px 0px 0px #d9d9d9;
-  -moz-box-shadow: 1px 0px 0px #d9d9d9;
-  box-shadow: 1px 0px 0px #d9d9d9;
-}
-.list .toolbar .toolbar a:last-child {
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
-  box-shadow: none;
-}
-.list .toolbar .toolbar a.current {
-  background: transparent;
-  color: #333;
-  text-shadow: none !important;
 }
 /* @end */
 /* @group widgets */
