New kitchenSink for FORM

--- a/src/stylesheets/Lungo.layout.nav.less
+++ b/src/stylesheets/Lungo.layout.nav.less
@@ -80,21 +80,21 @@ header nav {
 }
 
 footer nav {
-    margin: 1px;
     display: block;
 
     & a {
         padding: 0;
-        height:  42px; }
+        height:  44px;
+    }
 
     & .icon {
         display: block;
         top:  0px;
         font-size: 2.0em !important;
-        line-height: 40px; }
+        line-height: 44px; }
 
     & .bubble {
-        top:  -38px;
+        top:  -42px;
         left: 4px;
 
         & .loading {
@@ -111,8 +111,8 @@ footer nav {
         font-size: 2.3em; }
 
      &.with-labels {
-        & .icon { line-height: 32px; }
-        & .bubble { top: -32px; }
+        & .icon { line-height: 36px; }
+        & .bubble { top: -34px; }
 
         & abbr {
             display: block;
