--- a/src/stylesheets/Lungo.theme.scaffold.less
+++ b/src/stylesheets/Lungo.theme.scaffold.less
@@ -39,20 +39,16 @@ section > header {
     background: @theme;
     .box-shadow(~"inset 0 1px 0 "@theme-light~", inset 0 -1px 0 "@theme-dark);
     z-index: 2;
-    & .title , .subtitle {
-        color: @white;
-    }
+    & .title , .subtitle { color: @white; }
 }
 
 section > footer {
     background: @theme-dark;
     border-top: 1px inset @black;
-    color: @white;
-}
+    color: @white; }
 
 article {
-    background: @theme-light;
-}
+    background: @theme-light; }
 /* @end */
 
 /* @group <nav> */
@@ -87,8 +83,7 @@ footer nav {
         &.current, &.active {
             color: @white;
             background: @black;
-            .box-shadow(~"inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)");
-        }
+            .box-shadow(~"-1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)"); }
     }
 }
 
@@ -99,8 +94,7 @@ footer nav {
         color: @theme;
         &.current {
             color:  @white;
-            .box-shadow(inset 0 -3px 0 @white);
-        }
+            .box-shadow(inset 0 -3px 0 @white); }
     }
 }
 /* @end */
@@ -112,17 +106,14 @@ aside {
 
     & header, footer {
         .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1)");
-        background: #272727;
-    }
+        background: #272727; }
 
     & article {
-        background: none;
-    }
+        background: none; }
 
     & .list {
         & ul {
-            background: none;
-        }
+            background: none; }
 
         & li {
             color: #F0F0F0;
@@ -130,8 +121,7 @@ aside {
             &.current { background: @theme-light; }
             & strong {
                 text-shadow: 0 1px 1px black;
-                color: #fff;
-            }
+                color: @white; }
             & small { color:  rgba(255,255,255,0.3); }
         }
     }
@@ -139,8 +129,7 @@ aside {
 
     & a.current {
         background: @theme-light;
-        color: @white;
-    }
+        color: @white; }
 }
 
 section.aside {
@@ -187,16 +176,6 @@ section .list {
         & strong {
             color: @theme-dark;
         }
-    }
-
-    &.indented li {
-        /*
-        border-left: solid 1px #e1e1e1;
-        border-right: solid 1px #e1e1e1;
-
-        &:first-child { border-top: solid 1px #e1e1e1; }
-        &:last-child { border-bottom: solid 1px  #e1e1e1; }
-        */
     }
 
     & .anchor {
@@ -333,23 +312,14 @@ input[type="range"] {
 .bubble {
     color: #fff;
 
-    &.count {
-        background: @theme;
-    }
+    &.count { background: @theme; }
 }
-    header .bubble.count {
-        background: @theme-dark;
-    }
+    header .bubble.count { background: @theme-dark; }
 
     article .list .bubble {
         .box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
     }
 
-
-    aside .list .bubble {
-        background: rgba(0,0,0,0.25);
-                .box-shadow(~'inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56');
-        .box-shadow(~'inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2)');
-    }
+    aside .list .bubble { background: rgba(0,0,0,0.25); }
 
 /* @end */
