--- a/src/stylesheets/css/Lungo.theme.scaffold.css
+++ b/src/stylesheets/css/Lungo.theme.scaffold.css
@@ -81,12 +81,12 @@ footer nav a.current,
 footer nav a.active {
   color: #ffffff;
   background: #000000;
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
-  -webkit-box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
-  -moz-box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
-  box-shadow: inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
+  -webkit-box-shadow: -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
+  -moz-box-shadow: -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
+  box-shadow: -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
+  -webkit-box-shadow: -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
+  -moz-box-shadow: -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
+  box-shadow: -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05);
 }
 .groupbar {
   background: #333333;
@@ -134,7 +134,7 @@ aside .list li.current {
 }
 aside .list li strong {
   text-shadow: 0 1px 1px black;
-  color: #fff;
+  color: #ffffff;
 }
 aside .list li small {
   color: rgba(255, 255, 255, 0.3);
@@ -214,16 +214,6 @@ section .list li {
 }
 .list li strong {
   color: #333333;
-}
-.list.indented li {
-  /*
-        border-left: solid 1px #e1e1e1;
-        border-right: solid 1px #e1e1e1;
-
-        &:first-child { border-top: solid 1px #e1e1e1; }
-        &:last-child { border-bottom: solid 1px  #e1e1e1; }
-        */
-
 }
 .list .anchor {
   color: #333333;
@@ -360,17 +350,5 @@ article .list .bubble {
 }
 aside .list .bubble {
   background: rgba(0, 0, 0, 0.25);
-  -webkit-box-shadow: inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56;
-  -moz-box-shadow: inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56;
-  box-shadow: inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56;
-  -webkit-box-shadow: inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56;
-  -moz-box-shadow: inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56;
-  box-shadow: inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56;
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2);
-  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2);
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2);
-  -webkit-box-shadow: inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2);
-  -moz-box-shadow: inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2);
-  box-shadow: inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2);
 }
 /* @end */
