--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -10,74 +10,82 @@
 @import "constants.less";
 @import "mixins.less";
 
-@theme:  #05b8e2;
-    @theme-light: #05bde9;
-    @theme-dark: #07acd0;
-    @theme-highlight: #93d6e7;
-        @theme-highlight-color: #1b6777;
-        @theme-highlight-text-shadow: 0 1px 0 rgba(255,255,255,0.2);
+@theme: #05bde9;
+@theme-light:  #42c8fc;
+@theme-dark: #07acd0;
+@color: #484a49;
 
-@border-radius-section: 4px;
-
-@color-border: #2566a4;
-    @color-border-light: #64b9e2;
-
-@color-main: #2c8bca;
-    @color-main-dark: #154f93;
+@section-radius: 4px;
+@header: #efeeed;
+    @header-bottom: #e0dedf;
+@footer: #353b42;
+    @footer-bottom: #272a2d;
 
 @color-secondary: #353b42;
     @color-secondary-dark: #272a2d;
 
-@background-secondary: #353b42 -webkit-gradient(linear, left top, left bottom, color-stop(0%, #353b42), color-stop(100%, #272a2d));
 
 .app {
     background: @black;
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
 }
 
 /* @group <header> & <footer> & <article> */
 section > header {
-    .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-    .box-shadow(~"inset 0 1px 0 "@color-border-light~", inset 0 -1px 0 "@color-border);
-    .border-radius(@border-radius-section @border-radius-section 0px 0px);
-    border-bottom: 1px solid #1a2838;
-    z-index: 2;
-    & .title {
-        color: @white;
-        text-shadow: 0px 1px 0px rgba(0,0,0,0.2); }
+    .linear-gradient(top, ~','@header 0%, ~','@header-bottom 100%);
+    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.8), inset 0 -1px 0 rgba(0,0,0,0.3)");
+    .border-radius(@section-radius @section-radius 0px 0px);
+    & .title { color: @color; }
     & .subtitle {
         color: rgba(255,255,255,0.6);
         text-shadow: 0px -1px 0px rgba(0,0,0,0.3); }
 }
 
 section > footer {
-    .linear-gradient(top, ~','@color-secondary 0%, ~','@color-secondary-dark 60%);
-    border-top: 1px inset #2A2A2A;
+    .linear-gradient(top, ~','@footer 0%, ~','@footer-bottom 60%);
     color: #353b42;
-    .border-radius(0px 0px @border-radius-section @border-radius-section); }
+    .border-radius(0px 0px @section-radius @section-radius); }
 
-article { background: #efefef; }
+article { background: #f4f5f5; }
 /* @end */
 
 /* @group <nav> */
 header nav {
-    & a {
-        color: @white;
-        text-shadow: 0 1px 0 rgba(0,0,0,0.3);
-    }
+    & a { color: @color; }
 
     &:not(.plain) {
         & a {
             .box-shadow(~"1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2)");
             &.accept { background: rgba(0, 255, 0, 0.4); }
             &.cancel { background: rgba(255, 0, 0, 0.4); }
-        }
-        &.right a { .box-shadow(~"-1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2)"); }
 
-        & a:active { .box-shadow(~"inset 1px 0 1px rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 0 42px rgba(0,0,0,0.5)"); }
+            &:active {
+                color: @white;
+                &.accept { background: rgba(0, 255, 0, 0.2); }
+                &.cancel { background: rgba(255, 0, 0, 0.2); }
+                &:not(.accept):not(.cancel) { background: rgba(0,0,0,0.1); }
+            }
+        }
+
+        &.right a {
+            .box-shadow(~"-1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2)");
+        }
     }
 
     &.plain a:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
+}
+
+footer nav {
+    & a {
+        color: rgba(0,0,0,0.6);
+        .text-shadow(0 1px 0 rgba(255,255,255,0.1));
+
+        &.current, &.active {
+            color: @white;
+            text-shadow: 0 0 1px @white;
+            background: @black;
+            .box-shadow(~"-1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)"); }
+    }
 }
 
 .toolbar a {
@@ -91,64 +99,48 @@ header nav {
 }
 
 .groupbar {
-    background: #272a2d;
-    border-bottom: solid 1px rgba(0,0,0,1);
-    .box-shadow(~"inset 0 1px 8px rgba(0,0,0,0.3)");
-
+    background: @color-secondary;
     & a {
-        color: #6e6e6e;
+        color: #e3e4e3;
         &.current {
-            color:  #fff;
-            border-bottom: solid 3px @color-border;
-        }
+            color:  @white;
+            .box-shadow(inset 0 -3px 0 @theme); }
     }
 }
 /* @end */
 
 /* @group <aside> */
-a {
-	//background-color: #333;
-}
 aside {
     color:  #fff;
-    background: #272727;
     background: #333;
 
     & header, footer {
-		.box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1)");
-    	background: #272727;
-	}
+        .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1)");
+        background: #272727; }
 
-	& article {
-		background: none;
-	}
+    & article { background: none; }
 
-	& .list {
-		& ul {
-			background: none;
-		}
+    & .list {
+        & ul { background: none; }
 
-		& li {
-			color: #F0F0F0;
-			border-bottom: 1px solid #2f2f2f;
+        & li {
+            color: #F0F0F0;
+            border-top: 1px solid rgba(255,255,255,0.05);
+            border-bottom: 1px solid #2f2f2f;
+            &.current { background: @theme; }
+            & strong {
+                text-shadow: 0 1px 1px rgba(0,0,0,0.75);
+                color: @white; }
+            & small { color:  rgba(255,255,255,0.5); }
+        }
+    }
 
-	   		& strong {
-				text-shadow: 0 1px 1px black;
-				color: #fff;
-			}
-
-			& small {
-				color:  rgba(255,255,255,0.3);
-			}
-		}
-	}
-
-	& a.current { background: #2f2f2f; }
+    & a.current { background: @theme; }
 }
 
 section.aside {
-    .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
-    &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
+    .box-shadow(~"-4px 0 8px rgba(0,0,0,0.4)");
+    &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.4)"); }
 }
 
 @media handheld, only screen and (min-width: 768px) {
@@ -160,79 +152,35 @@ section.aside {
 /* @end */
 
 /* @group .list */
-.list, .list li:not(.toolbar) a { color: #2a2a2a; }
+.list, .list li a { color: #2a2a2a; }
 
-.list {
-	& ul {
-		background: #fff;
-	}
+section .list {
+    & ul, li { background: #fff; }
     & li {
-        //background: #fff;
-        border-bottom: 1px inset #f8f8f8;
-        &:last-child { border-bottom: none; }
+        border-bottom: 1px inset #eee;
+    }
+}
 
-        &.selectable:active {
-            background: @theme-highlight;
-            color: @theme-highlight-color;
-            text-shadow: @theme-highlight-text-shadow;
+.list li {
+    &:last-child { border-bottom: none; }
 
-            & small, & .right:not(.bubble) {
-                color: @white;
-                text-shadow: none;
-            }
-        }
+    &.selectable:active {
+        background: @theme-light;
 
-        & small, & .right:not(.bubble) { color: #888; }
-
-        & strong {
-			color: #134c81;
-		}
+        & small, & .right:not(.bubble), & strong {
+            color: @white;
+            text-shadow: none; }
     }
 
-    &.indented li {
-        border-left: solid 1px #e1e1e1;
-        border-right: solid 1px #e1e1e1;
+    &.highlight { background: #eee; }
 
-        &:first-child { border-top: solid 1px #e1e1e1; }
-        &:last-child { border-bottom: solid 1px  #e1e1e1; }
-    }
-
-    & .anchor {
+    &.anchor {
         color: @white;
-        .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-        border: none;
-    }
+        background: @color;
+        border-bottom: none; }
 
-    & .tip {
-        color: #7a7a7a;
-        &.theme {
-            color: #fff;
-            .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-        }
-        &.dark {
-            .linear-gradient(top, ~','@color-secondary 0%, ~','@color-secondary-dark 100%);
-            color: #fff;
-            text-shadow: 0px -1px 0px rgba(0,0,0,0.5);
-
-            & a { color: #fff !important; }
-        }
-    }
-
-    & .toolbar {
-        border-bottom-color: rgba(0,0,0,0.2);
-
-        & .toolbar a {
-            .box-shadow(~"1px 0px 0px #d9d9d9");
-
-            &:last-child { .box-shadow(none); }
-            &.current {
-                background: transparent;
-                color: #333;
-                text-shadow: none !important;
-            }
-
-        }
-    }
+    & small, & .right:not(.bubble) { opacity: 0.75; }
+    & strong { color: #333; }
 }
 /* @end */
 
@@ -244,11 +192,15 @@ section.aside {
 }
 
 &.indented {
-    & ul { .border-radius(3px); }
+    & ul {
+        .border-radius(2px);
+        box-shadow: 0 0 2px rgba(0,0,0,0.2);
+    }
+
     & li {
-        &:first-child { .border-radius(3px 3px 0px 0px); }
+        &:first-child { .border-radius(2px 2px 0px 0px); }
         &:last-child {
-            .border-radius(0px 0px 3px 3px);
+            .border-radius(0px 0px 2px 2px);
             .box-shadow(0 1px 1px rgba(0,0,0,0.05));
         }
     }
@@ -257,94 +209,87 @@ section.aside {
 
 /* @group .button */
 .button {
-    .border-radius(@border-radius);
-    .box-shadow(~"inset 1px 0 0 rgba(0,0,0,0.1), inset 0 1px 0 rgba(0,0,0,0.1), inset -1px 0 0 rgba(0,0,0,0.1), inset 0 -2px 0 rgba(0,0,0,0.25), inset 0 -3px 0 rgba(255,255,255, 0.05), 0 1px 2px rgba(0,0,0,0.3)");
-
+    .border-radius(2px);
+    .box-shadow(~"inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3), inset 0 2px 0 rgba(255,255,255, 0.2)");
     font-weight: bold;
     text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 
     &:active { .box-shadow(~"inset 0 10px 30px rgba(0,0,0,0.2), inset 0 -2px 4px rgba(0,0,0,0.3)"); }
 
-    &.default {
-        background: #2c4579;
-        &:active, &.active { background: #213761;}
+    &.theme {
+        background: @theme;
+        &:active, &.active { background: @theme-dark;}
     }
 }
+
 /* @end */
 
 /* @group <form> */
 @box-shadow-form: ~'inset 0 2px 1px rgba(0,0,0,0.1)';
 @box-shadow-form-active: ~'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef';
-@box-shadow-form-big: inset 0 2px 4px rgba(0, 0, 0, 0.2);
 
 @border-radius-form: 2px;
 
 form, .form {
     & label {
-    	color: #999;
+        color: #999;
     }
 }
 input, textarea, select {
     border: 1px solid #ccc;
     .border-radius(@border-radius-form);
     color: #858585;
-    font-family: 'Roboto', Helvetica, Arial, sans-serif;
+    font-family: Helvetica, Arial, sans-serif;
     .box-shadow(@box-shadow-form);
 
     &:focus {
-		color: #000;
-    	border-color: @color-border-light;
-    	.box-shadow(0 0 6px @color-border-light);
-	}
+        color: #000;
+        border-color: @theme;
+        .box-shadow(0 0 6px @theme-light);
+    }
 }
 
 .select:after {
     background: #ccc;
     color: white;
-    border-top-right-radius: @border-radius;
-    border-bottom-right-radius: @border-radius;
+    border-top-right-radius: @border-radius-form;
+    border-bottom-right-radius: @border-radius-form;
 }
 
 /* @group .range */
 input[type="checkbox"] + span, input[type="radio"] + span {
     color: #fff;
     background: #a0a0a0;
-    .border-radius(@border-radius);
+    .border-radius(@border-radius-form);
 }
     input[type="checkbox"] + span::before,
     input[type="radio"] + span::before {
         background: #c1c1c1;
-        .border-radius(@border-radius);
+        .border-radius(@border-radius-form);
     }
 
     input[type="checkbox"]:checked + span,
     input[type="radio"]:checked + span {
-        .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-
-        .border-radius(@border-radius);
+        .linear-gradient(top, ~','@theme 0%, ~','@theme-dark 100%);
+        .border-radius(@border-radius-form);
     }
 /* @end */
-
-
 
 /* @group range */
 input[type="range"] {
     background-color: #c7c7c7;
-    .border-radius(@border-radius);
-    .box-shadow(@box-shadow-form-big);
+    .border-radius(@border-radius-form);
+    .box-shadow(@box-shadow-form);
 
+    &:active { .box-shadow(none); }
 
-    &:active {
-        .box-shadow(none);
-        .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-    }
     &::-webkit-slider-thumb {
-        //border: solid 7px rgba(255,255,255, 0.5);
-        .box-shadow(0 0 4px #333);
-        background: #fff;
+        .border-radius(12px);
+        background: #a0a0a0;
     }
     &:active::-webkit-slider-thumb {
-        .box-shadow(0px 0px 4px #34b7dc);
+        .box-shadow(0px 0px 4px @theme-light);
+        .linear-gradient(top, ~','@theme 0%, ~','@theme-dark 100%);
     }
 }
 /* @end */
@@ -360,12 +305,11 @@ input[type="range"] {
 
     & .bar {
         background: #c7c7c7;
-        .box-shadow(@box-shadow-form-big);
-        .border-radius(@border-radius);
+        .border-radius(@border-radius-form);
 
         & .value {
-            .linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-            .border-radius(@border-radius);
+            .linear-gradient(top, ~','@theme-light 0%, ~','@theme-dark 100%);
+            .border-radius(@border-radius-form);
 
             & .label {
                 float: right;
@@ -381,30 +325,14 @@ input[type="range"] {
 /* @end */
 
 
-/* @end */
+/* @group .bubble */
 .bubble {
-    color: #fff;
-    .border-radius(8px);
-    text-shadow: 0 0 1px rgba(0,0,0,1);
-
-    &.count {
-    	.linear-gradient(top, ~','@color-main 0%, ~','@color-main-dark 100%);
-    	.box-shadow(0 0 2px rgba(0,0,0,0.5);
-    }
+    color: @white;
+    .border-radius(2px);
+    &.count { .linear-gradient(top, ~','@theme-light 0%, ~','@theme-dark 100%); }
 }
-    header .bubble.count {
-        .linear-gradient(top, ~','@color-secondary 0%, ~','@color-secondary-dark 100%);
+    article .list .bubble {
+        .box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
     }
-
-    article .list .bubble{
-		.box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
-	}
-
-
-	aside .list .bubble {
-		background: rgba(0,0,0,0.25);
-				.box-shadow(~'inset 0 1px 0 #1b212a), inset 0 -1px 0 #454c56');
-		.box-shadow(~'inset 0 1px 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(255,255,255,0.2)');
-	}
-
+    aside .list .bubble { background: rgba(0,0,0,0.25); }
 /* @end */
