Apply final theme for Lungo2

--- a/src/stylesheets/Lungo.layout.aside.less
+++ b/src/stylesheets/Lungo.layout.aside.less
@@ -43,7 +43,7 @@ aside {
     & header, & footer {
         position: relative;
         left: none;
-        height: @header-height;
+        height: @header-footer-height;
     }
 
     & footer {
