--- a/src/stylesheets/constants.less
+++ b/src/stylesheets/constants.less
@@ -1,15 +1,13 @@
 @import "mixins.less";
 
 /* DIMENSIONS */
-@header-height: 42px;
-    @header_nav_height: 41px;
+@header-footer-height: 44px;
     @header_groupbar_height: 30px;
-@footer-height: 44px;
 
 @article-bottom: 45px;
-    @article_with_header_extended: 72px;
+    @article_with_header_extended: 74px;
 
-@border-radius: 3px;
+@border-radius: 2px;
 
 @aside-width: 256px;
     @aside-width-small: 64px;
