--- a/src/stylesheets/Lungo.layout.article.less
+++ b/src/stylesheets/Lungo.layout.article.less
@@ -38,9 +38,9 @@ article {
     }
 }
 
-header:not(.extended) ~ article { top: @header-height; }
+header:not(.extended) ~ article { top: @header-footer-height; }
     header.extended ~ article { top: @article_with_header_extended; }
-footer:not(.with-labels) ~ article { bottom: @article-bottom; }
+footer ~ article { bottom: @header-footer-height; }
 
 @media handheld, only screen and (min-width: 768px) {
     article.aside { .transform(translate3d(0px, 0, 0)); }
