--- a/src/stylesheets/Lungo.layout.less
+++ b/src/stylesheets/Lungo.layout.less
@@ -76,43 +76,28 @@ header, footer  {
 
 header {
     top: 0;
-    height: @header-height;
-    line-height: @header-height;
+    height: @header-footer-height;
+    line-height: @header-footer-height;
 
     & .title {
         margin-left: 4px;
         float: left;
         z-index: -1;
-        font-size: 15px;
+        font-size: 1.2em;
         font-weight: bold;
 
-        & img {
-            height: 24px;
-        }
+        & img { height: 24px; }
 
         &.centered {
             position: absolute;
             left: 0px;
             right: 0px;
             text-align: center;
-            display: inline-block;
-        }
-        &.with-subtitle {
-            line-height: 20px;
-            padding-top: 4px;
-        }
-    }
-
-    & .subtitle {
-        margin-left: 4px;
-        display:block;
-        font-size: 11px;
-        line-height: 11px;
-        width: 100%;
+            display: inline-block; }
     }
 }
 
 footer {
     bottom: 0;
-    height: @footer-height;
+    height: @header-footer-height;
 }
