--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -9,125 +9,172 @@
 
 @import "constants.less";
 @import "mixins.less";
+@import "lungo.theme.default.font.less";
 
-@theme: #05bde9;
-@theme-light:  #42c8fc;
-@theme-dark: #07acd0;
+@theme: #2A95D3;
+@theme-light:  #39ABE1;
+@theme-dark: #1984C2;
+@theme: #2C8BCA;
+@theme-light:  #2C8BCA;
+@theme-dark: #154F93;
+@footer: #292F34;
+    @footer-dark: #23282C;
 @color: #484a49;
 
 @section-radius: 4px;
-@header: #efeeed;
-    @header-bottom: #e0dedf;
-@footer: #353b42;
-    @footer-bottom: #272a2d;
-
-@color-secondary: #353b42;
-    @color-secondary-dark: #272a2d;
-
 
 .app {
     background: @black;
-    font-family: Helvetica, Arial, sans-serif;
+    font-family: "Roboto", Helvetica, Arial, sans-serif;
+}
+
+.theme, li.theme, a.theme {
+    background: @theme;
+    &:active { background: @theme-dark;}
 }
 
 /* @group <header> & <footer> & <article> */
 section > header {
-    .linear-gradient(top, ~','@header 0%, ~','@header-bottom 100%);
-    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.8), inset 0 -1px 0 rgba(0,0,0,0.3)");
+    .linear-gradient(top, ~','@theme, ~','@theme-dark);
+    .box-shadow(~"inset 0 1px 0 rgba(255,255,255,0.4), inset 0 -2px 0 rgba(255,255,255,0.1), inset 0 -1px 0 rgba(0,0,0,0.5)");
     .border-radius(@section-radius @section-radius 0px 0px);
-    & .title { color: @color; }
-    & .subtitle {
-        color: rgba(255,255,255,0.6);
-        text-shadow: 0px -1px 0px rgba(0,0,0,0.3); }
+
+    & .title {
+        color: @white;
+        text-shadow: 0 1px 0 rgba(0,0,0,0.2);
+    }
+}
+section > footer {
+    .linear-gradient(top, ~','@footer 0%, ~','@footer-dark 60%);
+    .border-radius(0px 0px @section-radius @section-radius);
+    .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.8), inset 0 2px 0 rgba(255,255,255,0.05)");
 }
 
-section > footer {
-    .linear-gradient(top, ~','@footer 0%, ~','@footer-bottom 60%);
-    color: #353b42;
-    .border-radius(0px 0px @section-radius @section-radius); }
+section > nav.groupbar {
+    .linear-gradient(top, ~','@footer-dark 0%, ~','@footer 60%);
+}
 
-article { background: #f4f5f5; }
+section > article { background: #f4f5f5; }
 /* @end */
 
 /* @group <nav> */
 header nav {
-    & a { color: @color; }
+    & a {
+        color: @white;
+        // &:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
+    }
 
-    &:not(.plain) {
-        & a {
-            .box-shadow(~"1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2)");
-            &.accept { background: rgba(0, 255, 0, 0.4); }
-            &.cancel { background: rgba(255, 0, 0, 0.4); }
+    &.box {
+        .box-shadow(~"1px 0 0 rgba(255,255,255,0.2), inset -1px 0 0 rgba(0,0,0,0.2)");
+        &.accept { background: rgba(0, 255, 0, 0.4); }
+        &.cancel { background: rgba(255, 0, 0, 0.4); }
 
-            &:active {
-                color: @white;
-                &.accept { background: rgba(0, 255, 0, 0.2); }
-                &.cancel { background: rgba(255, 0, 0, 0.2); }
-                &:not(.accept):not(.cancel) { background: rgba(0,0,0,0.1); }
-            }
+        &:active {
+            color: @white;
+            &.accept { background: rgba(0, 255, 0, 0.2); }
+            &.cancel { background: rgba(255, 0, 0, 0.2); }
+            &:not(.accept):not(.cancel) { background: rgba(0,0,0,0.1); }
         }
 
-        &.right a {
+        &.right a:not(.ios) {
             .box-shadow(~"-1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2)");
         }
     }
 
-    &.plain a:active { text-shadow: 0 0 4px rgba(255,255,255,0.5); }
-}
-
-footer nav {
-    & a {
-        color: rgba(0,0,0,0.6);
-        .text-shadow(0 1px 0 rgba(255,255,255,0.1));
-
-        &.current, &.active {
-            color: @white;
-            text-shadow: 0 0 1px @white;
-            background: @black;
-            .box-shadow(~"-1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)"); }
+    &.button a {
+        border-radius: @section-radius;
+        .linear-gradient(top, ~','rgba(0,0,0,0.0), ~','rgba(0,0,0,0.1));
+        box-shadow: 0 1px 0 rgba(255,255,255,0.2), inset 0 0 3px rgba(0,0,0,0.3), inset 0 1px 1px rgba(0, 0, 0, .5);
+        &:active { background: rgba(0,0,0,0.2); }
     }
+
 }
 
-.toolbar a {
-    color: #cdd9e3;
-    .border-radius(4px);
-
-    &.current, &.active {
-        background: #111;
-        .box-shadow(~"inset 0 1px 1px rgba(0,0,0,1), -1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)");
-    }
+footer nav a.current {
+    background: @black;
+    .box-shadow(~"-1px 0 0 rgba(255,255,255,0.05), 1px 1px 0 rgba(255,255,255,0.05)");
 }
 
-.groupbar {
-    background: @color-secondary;
-    & a {
-        color: #e3e4e3;
-        &.current {
-            color:  @white;
-            .box-shadow(inset 0 -3px 0 @theme); }
-    }
+footer nav a, nav.groupbar a{
+    color: rgba(0,0,0,0.7);
+    .text-shadow(0 1px 0 rgba(255,255,255,0.1));
+    &.current {
+        color:  @white;
+        text-shadow: 0 0 1px @white;}
 }
+
+nav.groupbar a.current { .box-shadow(inset 0 -3px 0 @theme); }
+
 /* @end */
 
 /* @group <aside> */
 aside {
-    color:  #fff;
-    background: #333;
+    color: @white;
+    background: @footer;
 
     & header, footer {
         .box-shadow(~"inset 0 1px 0 rgba(0,0,0,0.1), inset 0 -1px 0 rgba(255,255,255,0.1)");
-        background: #272727; }
+        background: @footer-dark; }
 
     & article { background: none; }
+}
 
-    & .list {
-        & ul { background: none; }
+section.aside {
+    .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
+    &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
+}
+/*
+@media handheld, only screen and (min-width: 768px) {
+    section.current, section.show {
+        .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
+        &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
+    }
+}
+*/
+/* @end */
 
-        & li {
-            color: #F0F0F0;
+/* @group .list */
+@list-border: #ddd;
+@list-color: #2a2a2a;
+
+.list {
+    & li {
+        background: @white;
+        border-bottom: 1px inset @list-border;
+
+        &:last-child { border-bottom: none; }
+
+        &, & a { color: @list-color; }
+
+        &.highlight { background: @list-border; }
+        &.anchor {
+            background: @footer;
+            border-bottom: none;
+            &, & a { color: @white !important; }
+        }
+        &.selectable:active {
+            background: @theme-light;
+
+            &, & a {
+                color: @white;
+                text-shadow: none;
+            }
+        }
+
+        & small, & .right:not(.bubble) { opacity: 0.8; }
+    }
+}
+
+aside .list {
+    & li {
+            background: none;
             border-top: 1px solid rgba(255,255,255,0.05);
-            border-bottom: 1px solid #2f2f2f;
-            &.current { background: @theme; }
+            border-bottom: 1px solid ;
+            &.current {
+                border-top-color: @theme;
+                .linear-gradient(top, ~','@theme-light 25%, ~','@theme-dark 100%);
+                background-color: @red;
+            }
             & strong {
                 text-shadow: 0 1px 1px rgba(0,0,0,0.75);
                 color: @white; }
@@ -135,72 +182,25 @@ aside {
         }
     }
 
-    & a.current { background: @theme; }
-}
-
-section.aside {
-    .box-shadow(~"-4px 0 8px rgba(0,0,0,0.4)");
-    &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.4)"); }
-}
-
-@media handheld, only screen and (min-width: 768px) {
-    section.current, section.show {
-        .box-shadow(~"-4px 0 8px rgba(0,0,0,0.5)");
-        &.right { .box-shadow(~"4px 0 8px rgba(0,0,0,0.5)"); }
-    }
-}
-/* @end */
-
-/* @group .list */
-.list, .list li a { color: #2a2a2a; }
-
-section .list {
-    & ul, li { background: #fff; }
-    & li {
-        border-bottom: 1px inset #eee;
-    }
-}
-
-.list li {
-    &:last-child { border-bottom: none; }
-
-    &.selectable:active {
-        background: @theme-light;
-
-        & small, & .right:not(.bubble), & strong {
-            color: @white;
-            text-shadow: none; }
-    }
-
-    &.highlight { background: #eee; }
-
-    &.anchor {
-        color: @white;
-        background: @color;
-        border-bottom: none; }
-
-    & small, & .right:not(.bubble) { opacity: 0.75; }
-    & strong { color: #333; }
-}
 /* @end */
 
 /* @group widgets */
 .splash {
-    background: @theme-dark;
+    background: @footer;
     color: #fff;
-    text-shadow: 0px 1px 0px rgba(0,0,0,0.2);
+    text-shadow: 0 1px 0px rgba(0,0,0,0.2);
 }
 
 &.indented {
     & ul {
-        .border-radius(2px);
-        box-shadow: 0 0 2px rgba(0,0,0,0.2);
+        border: 1px solid @list-border;
+        box-shadow: 0 0 4px rgba(0,0,0,0.1);
     }
 
     & li {
-        &:first-child { .border-radius(2px 2px 0px 0px); }
+        &:first-child { .border-radius(2px 2px 0 0); }
         &:last-child {
-            .border-radius(0px 0px 2px 2px);
+            .border-radius(0 0 2px 2px);
             .box-shadow(0 1px 1px rgba(0,0,0,0.05));
         }
     }
@@ -208,18 +208,13 @@ section .list {
 
 
 /* @group .button */
-.button {
+a.button {
     .border-radius(2px);
     .box-shadow(~"inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3), inset 0 2px 0 rgba(255,255,255, 0.2)");
     font-weight: bold;
     text-shadow: 0 -1px 0 rgba(0,0,0,0.3);
 
     &:active { .box-shadow(~"inset 0 10px 30px rgba(0,0,0,0.2), inset 0 -2px 4px rgba(0,0,0,0.3)"); }
-
-    &.theme {
-        background: @theme;
-        &:active, &.active { background: @theme-dark;}
-    }
 }
 
 /* @end */
@@ -329,8 +324,13 @@ input[type="range"] {
 .bubble {
     color: @white;
     .border-radius(2px);
-    &.count { .linear-gradient(top, ~','@theme-light 0%, ~','@theme-dark 100%); }
+
+    &.count { .linear-gradient(top, ~','@theme-light 0%, ~','@theme-dark 100%);  }
 }
+    footer .bubble {
+        .box-shadow(~'inset 0 1px 1px rgba(255,255,255,0.3), 0 1px 2px rgba(0,0,0,0.5)');  }
+
+
     article .list .bubble {
         .box-shadow(~'inset 1px 0 0 rgba(0,0,0,0.3), inset 0 1px 0 rgba(0,0,0,0.3), inset -1px 0 0 rgba(0,0,0,0.3), inset 0 -1px 0 rgba(0,0,0,0.3)');
     }
