--- a/src/stylesheets/css/Lungo.widgets.colour.css
+++ b/src/stylesheets/css/Lungo.widgets.colour.css
@@ -12,112 +12,98 @@ a.grey,
 .grey {
   background-color: #cccccc;
 }
-a.grey:active,
-a.grey.active {
+a.grey:active {
   background-color: #b5b5b5;
 }
 a.dark-grey,
 .dark-grey {
   background-color: #000000;
 }
-a.dark-grey:active,
-a.dark-grey.active {
+a.dark-grey:active {
   background-color: #000000;
 }
 a.red,
 .red {
   background-color: #e33100;
 }
-a.red:active,
-a.red.active {
+a.red:active {
   background-color: #c5280f;
 }
 a.lightgreen,
 .lightgreen {
   background-color: #91bd09;
 }
-a.lightgreen:active,
-a.lightgreen.active {
+a.lightgreen:active {
   background-color: #7ea41a;
 }
 a.green,
 .green {
   background-color: #009600;
 }
-a.green:active,
-a.green.active {
+a.green:active {
   background-color: #00770e;
 }
 a.blue,
 .blue {
   background-color: #237fd7;
 }
-a.blue:active,
-a.blue.active {
+a.blue:active {
   background-color: #1a69b6;
 }
 a.arcticblue,
 .arcticblue {
   background-color: #2daebf;
 }
-a.arcticblue:active,
-a.arcticblue.active {
+a.arcticblue:active {
   background-color: #238e9e;
 }
 a.orange,
 .orange {
   background-color: #ff5c00;
 }
-a.orange:active,
-a.orange.active {
+a.orange:active {
   background-color: #da4e15;
 }
 a.purple,
 .purple {
   background-color: #7b658d;
 }
-a.purple:active,
-a.purple.active {
+a.purple:active {
   background-color: #574765;
 }
 a.magenta,
 .magenta {
   background-color: #a9014b;
 }
-a.magenta:active,
-a.magenta.active {
+a.magenta:active {
   background-color: #831239;
 }
 a.pink,
 .pink {
   background-color: #ff007f;
 }
-a.pink:active,
-a.pink.active {
+a.pink:active {
   background-color: #de2870;
 }
 a.yellow,
 .yellow {
   background-color: #ffb515;
 }
-a.yellow:active,
-a.yellow.active {
+a.yellow:active {
   background-color: #dfa020;
 }
 a.twitter,
 .twitter:not(span) {
   background-color: #35cdff;
 }
-a.twitter:active,
-a.twitter.active {
+a.twitter:active {
   background-color: #2bafda;
 }
 a.facebook,
 .facebook:not(span) {
   background-color: #3b5998;
 }
-a.facebook:active,
-a.facebook.active {
+a.facebook:active {
   background-color: #2c4579;
 }
 li.grey {
