--- a/src/stylesheets/css/Lungo.widgets.form.css
+++ b/src/stylesheets/css/Lungo.widgets.form.css
@@ -9,8 +9,8 @@
 /* DIMENSIONS */
 /* COLORS */
 form.wrapper input:not([type=checkbox]),
-form.wrapper textarea,
-form.wrapper select {
+form textarea,
+form select {
   margin: 3px 0px 3px 0px;
 }
 form.rounded input:not([type=checkbox]),
@@ -52,15 +52,15 @@ form.rounded select:last-of-type {
   background-clip: padding-box;
 }
 label:not(.select) {
-  font-size: 0.85em;
-  line-height: 1.8em;
+  font-size: 0.9em;
+  line-height: 1.5em;
 }
 input:not([type=checkbox]),
 textarea,
 select {
   display: block;
   width: 96%;
-  padding: 0.5% 2% ;
+  padding: 0.5% 2%;
   height: 29px;
   font-size: 14px;
   font-weight: bold;
@@ -69,21 +69,23 @@ select {
   -webkit-font-smoothing: antialiased;
 }
 textarea {
+  padding-top: 1.5%;
   min-height: 48px;
 }
 /* @group search */
 input[type=search] {
-  width: 86%;
+  width: 85%;
+  display: inline-block;
 }
 input[type=search]  + .button {
   float: right;
   padding: 0px;
-  width: 32px;
-  height: 30px;
+  width: 13%;
+  height: 29px;
 }
 input[type=search]  + .button .icon {
-  font-size: 22px !important;
-  line-height: 30px;
+  top: -3px;
+  float: none;
 }
 /* @end */
 /* @group select */
@@ -113,65 +115,46 @@ label.select {
 }
 /* @end */
 /* @group switch */
-input[type="checkbox"],
-input[type="radio"] {
+input[type="checkbox"] {
   width: 82px;
   height: 29px;
   z-index: 2;
 }
-input[type="checkbox"] + span::after,
-input[type="radio"] + span::after {
+input[type="checkbox"] + span::after {
   content: "OFF";
 }
-input[type="checkbox"]:checked + span::after,
-input[type="radio"]:checked + span::after {
+input[type="checkbox"]:checked + span::after {
   content: "ON";
 }
 input[type="checkbox"] + span,
-input[type="radio"] + span,
 input[type="checkbox"] + span::before,
-input[type="radio"] + span::before,
-input[type="checkbox"] + span::after,
-input[type="radio"] + span::after {
+input[type="checkbox"] + span::after {
   display: inline-block;
 }
 input[type="checkbox"] + span::before,
-input[type="radio"] + span::before,
 input[type="checkbox"] + span::after,
-input[type="radio"] + span::after,
 input[type="checkbox"]:checked + span::before,
-input[type="radio"]:checked + span::before,
-input[type="checkbox"]:checked + span::after,
-input[type="radio"]:checked + span::after {
+input[type="checkbox"]:checked + span::after {
   top: 0;
 }
 input[type="checkbox"] + span::after,
-input[type="radio"] + span::after,
-input[type="checkbox"]:checked + span::before,
-input[type="radio"]:checked + span::before {
+input[type="checkbox"]:checked + span::before {
   right: 0;
 }
 input[type="checkbox"] + span::before,
-input[type="radio"] + span::before,
-input[type="checkbox"]:checked + span::after,
-input[type="radio"]:checked + span::after {
+input[type="checkbox"]:checked + span::after {
   left: 0;
 }
 input[type="checkbox"],
-input[type="radio"],
 input[type="checkbox"] + span::before,
-input[type="radio"] + span::before,
-input[type="checkbox"] + span::after,
-input[type="radio"] + span::after {
+input[type="checkbox"] + span::after {
   position: absolute;
 }
-input[type="checkbox"],
-input[type="radio"] {
+input[type="checkbox"] {
   -webkit-opacity: 0;
   opacity: 0;
 }
-input[type="checkbox"] + span,
-input[type="radio"] + span {
+input[type="checkbox"] + span {
   width: 82px;
   height: 27px;
   position: relative;
@@ -181,25 +164,21 @@ input[type="radio"] + span {
   text-transform: uppercase;
   text-indent: -9999px;
 }
-input[type="checkbox"] + span::before,
-input[type="radio"] + span::before {
+input[type="checkbox"] + span::before {
   content: "";
   width: 41px;
   height: 27px;
 }
-input[type="checkbox"] + span::after,
-input[type="radio"] + span::after {
+input[type="checkbox"] + span::after {
   text-indent: 0;
   width: 41px;
   height: 27px;
   text-align: center;
 }
-input[type="checkbox"]:checked + span::before,
-input[type="radio"]:checked + span::before {
+input[type="checkbox"]:checked + span::before {
   left: auto;
 }
-input[type="checkbox"]:checked + span::after,
-input[type="radio"]:checked + span::after {
+input[type="checkbox"]:checked + span::after {
   height: 27px;
 }
 /* @end */
