--- a/src/stylesheets/Lungo.theme.default.less
+++ b/src/stylesheets/Lungo.theme.default.less
@@ -76,7 +76,7 @@ header nav {
             &:not(.accept):not(.cancel) { background: rgba(0,0,0,0.1); }
         }
 
-        &.right a:not(.ios) {
+        &.right a {
             .box-shadow(~"-1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2)");
         }
     }
@@ -145,6 +145,8 @@ section.aside {
         &:last-child { border-bottom: none; }
 
         &, & a { color: @list-color; }
+
+        &.contrast { background: @footer; }
 
         &.highlight { background: @list-border; }
         &.anchor {
@@ -220,16 +222,12 @@ a.button {
 /* @end */
 
 /* @group <form> */
-@box-shadow-form: ~'inset 0 2px 1px rgba(0,0,0,0.1)';
+@box-shadow-form: ~'inset 0 1px 2px rgba(0,0,0,0.1)';
 @box-shadow-form-active: ~'inset 0 1px 1px rgba(0,0,0,0.1), 3px 0 #f0eeef, 0 3px #f0eeef, -3px 0 #f0eeef, 0 -3px #f0eeef';
 
 @border-radius-form: 2px;
+label { color: #999; }
 
-form, .form {
-    & label {
-        color: #999;
-    }
-}
 input, textarea, select {
     border: 1px solid #ccc;
     .border-radius(@border-radius-form);
@@ -238,7 +236,7 @@ input, textarea, select {
     .box-shadow(@box-shadow-form);
 
     &:focus {
-        color: #000;
+        color: #484a49;
         border-color: @theme;
         .box-shadow(0 0 6px @theme-light);
     }
