--- a/src/stylesheets/css/Lungo.theme.default.css
+++ b/src/stylesheets/css/Lungo.theme.default.css
@@ -145,7 +145,7 @@ header nav.box:active.cancel {
 header nav.box:active:not(.accept):not(.cancel) {
   background: rgba(0, 0, 0, 0.1);
 }
-header nav.box.right a:not(.ios) {
+header nav.box.right a {
   -webkit-box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
   -moz-box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
   box-shadow: -1px 0 0 rgba(255,255,255,0.2), inset 1px 0 0 rgba(0,0,0,0.2);
@@ -253,6 +253,9 @@ section.aside.right {
 .list li,
 .list li a {
   color: #2a2a2a;
+}
+.list li.contrast {
+  background: #292f34;
 }
 .list li.highlight {
   background: #dddddd;
@@ -381,8 +384,7 @@ a.button:active {
 }
 /* @end */
 /* @group <form> */
-form label,
-.form label {
+label {
   color: #999;
 }
 input,
@@ -403,17 +405,17 @@ select {
   background-clip: padding-box;
   color: #858585;
   font-family: Helvetica, Arial, sans-serif;
-  -webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 }
 input:focus,
 textarea:focus,
 select:focus {
-  color: #000;
+  color: #484a49;
   border-color: #2c8bca;
   -webkit-box-shadow: 0 0 6px #2c8bca;
   -moz-box-shadow: 0 0 6px #2c8bca;
@@ -503,12 +505,12 @@ input[type="range"] {
   -webkit-background-clip: padding-box;
   -moz-background-clip: padding;
   background-clip: padding-box;
-  -webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  -webkit-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  -moz-box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
-  box-shadow: inset 0 2px 1px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  -moz-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+  box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
 }
 input[type="range"]:active {
   -webkit-box-shadow: none;
