--- a/src/stylesheets/css/Lungo.widgets.button.css
+++ b/src/stylesheets/css/Lungo.widgets.button.css
@@ -8,7 +8,7 @@
  */
 /* DIMENSIONS */
 /* COLORS */
-a.button {
+article a.button {
   display: inline-block;
   height: 40px;
   padding: 0 8px;
@@ -32,16 +32,16 @@ a.button {
   -o-user-select: none;
   user-select: none;
 }
-a.button:active,
-a.button.active {
+article a.button:active,
+article a.button.active {
   background: #4b4b4b;
 }
-a.button:disabled,
-a.button.disabled {
+article a.button:disabled,
+article a.button.disabled {
   background: rgba(255, 255, 255, 0.2);
   color: #999 !important;
 }
-a.button .icon {
+article a.button .icon {
   position: relative;
   top: 3px;
   height: 18px;
@@ -50,15 +50,15 @@ a.button .icon {
   line-height: 18px;
   margin-right: 4px;
 }
-a.button img {
+article a.button img {
   top: 0px !important;
 }
-a.button.big {
+article a.button.big {
   width: 100%;
   padding: 0px;
   margin-bottom: 4px;
 }
-a.button.big .icon {
+article a.button.big .icon {
   margin: 8px -18px 0 12px;
   float: left;
 }
